# LAHacks2026

./: .gitignore  README.md  requirements.txt
dashboard/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  loading.tsx  page.tsx
dashboard/app/(app)/: layout.tsx
dashboard/app/components/: AlertsClient.tsx  AlertsWrapper.tsx  CameraBentoBoard.tsx  CameraFrameSender.tsx  CameraFrameViewer.tsx  DashboardThemeScope.tsx  Navbar.tsx
dashboard/app/dashboard/: loading.tsx  page.tsx
dashboard/components/: Dither.jsx  DitherBackground.tsx  GlassSurface.css
dashboard/components/ui/: button.tsx
dashboard/server/: frame-stream-server.mjs
database/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
database/api/: main.py
database/db/: migrate.sh
database/db/migrations/: 0001_init.sql  0002_multimodal_memory.sql
database/ingest/: config.py  db.py  embed.py  events.py  store.py  windows.py  worker.py
database/recorder/: record.sh
database/samples/: fall.jsonl
lingbot_bridge/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
lingbot_bridge/bridge/: cloud_export.py  config.py  inference_runner.py  ingest_server.py  sessions.py  viser_server.py
lingbot_bridge/scripts/: auto_deploy.sh  download_model.sh  entrypoint.sh  patch_demo.py  restart.sh  setup.sh  upload_demo.sh
mobile/: audio.txt  omni.txt  setup.txt
mobile/Responder/: .env  .env.example  project.yml
modal_app/: splat.py
scripts/: index_videos.py  process_video.py  run_sparse_splat.py
(+59 files in other folders)
